<resources>
    <string name="app_name">GADS2020PracticeProject1</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="splashimage">SplashImage</string>
    <string name="project_on_github_link">Project on GITHUB(link)</string>
    <string name="email_address">Email Address</string>
    <string name="label_submission_successful">Submission Successful</string>
    <string name="label_submission_failed">Submission not Successful</string>
    <string name="label_are_you_sure">Are you sure</string>
    <string name="desc_question_mark">Question Mark</string>
    <string name="btn_label_yes">Yes</string>
    <string name="cancel_dialog">Cancel Dialog</string>
    <string name="desc_gads_banner">GADS banner background</string>
    <string name="submit">Submit</string>
    <string name="leaderboard">LeaderBoard</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="project_submission">Project Submission</string>
    <string name="confirmation">Confirmation</string>
    <string name="success">Success</string>
    <string name="failure">Failure</string>
    <string name="required">Required</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_link">Invalid Link</string>


</resources>
