<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.esq.gads2020practiceproject1.viewmodel.SubmitViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/launch_bg"
        tools:context=".ui.SubmitActivity">

            <ImageView
                android:id="@+id/ibBack"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/img"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/ic_arrow_back"
                android:tint="@android:color/white" />

            <ImageView
                android:id="@+id/img"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="?actionBarSize"
                android:contentDescription="@string/desc_gads_banner"
                app:layout_constraintBottom_toBottomOf="@+id/ibBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ibBack"
                app:srcCompat="@drawable/gads_header" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/project_submission"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img" />

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="@drawable/gradient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="56dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view"
            app:layout_constraintVertical_bias="0.4">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view">

                <EditText
                    android:id="@+id/editTextFirstName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/smallest_margin"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    android:padding="10dp"
                    app:addTextChangedListener="@{viewModel.firstNameTextWatcher}" />

                <EditText
                    android:id="@+id/editTextLastName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/smallest_margin"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    android:padding="10dp"
                    app:addTextChangedListener="@{viewModel.lastNameTextWatcher}" />
            </LinearLayout>

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/smallest_margin"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="@dimen/smallest_margin"
                android:layout_weight="1"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                app:addTextChangedListener="@{viewModel.emailTextWatcher}" />

            <EditText
                android:id="@+id/editTextProjectLink"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/smallest_margin"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="@dimen/smallest_margin"
                android:layout_weight="1"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/project_on_github_link"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                app:addTextChangedListener="@{viewModel.gitLinkTextWatcher}" />

        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:background="@drawable/btn_submit_background_alt"
            android:padding="5dp"
            android:onClick="@{viewModel::onSubmitClicked}"
            android:text="@string/submit"
            android:textColor="@color/colorBackground"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintVertical_bias="0.3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>